--- a/i18n/fa_IR.po
+++ b/i18n/fa_IR.po
@@ -6,20 +6,54 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-29 16:09+0000\n"
-"PO-Revision-Date: 2024-04-29 19:45+0330\n"
+"POT-Creation-Date: 2024-07-09 21:05+0000\n"
+"PO-Revision-Date: 2024-07-10 00:44+0330\n"
 "Last-Translator: Arash Homayounfar <homayounfar@msn.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n==0 || n==1);\n"
-"Language: fa_IR\n"
+"Plural-Forms: \n"
+"Language: fa\n"
 "X-Generator: Poedit 2.2\n"
 
 #. module: hr_extend_ipac
 #: model:ir.actions.report,print_report_name:hr_extend_ipac.resume_en_report
+#: model:ir.actions.report,print_report_name:hr_extend_ipac.resume_en_report_bw
 msgid "'Resume-%s' % object.name "
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model_terms:ir.ui.view,arch_db:hr_extend_ipac.print_resume
+msgid ""
+"<span class=\"page\"/>\n"
+"                    /\n"
+"                    <span class=\"topage\"/>"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_needaction
+msgid "Action Needed"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_ids
+msgid "Activities"
+msgstr "فعالیت ها"
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_exception_decoration
+msgid "Activity Exception Decoration"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_state
+msgid "Activity State"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_type_icon
+msgid "Activity Type Icon"
 msgstr ""
 
 #. module: hr_extend_ipac
@@ -28,6 +62,26 @@ msgid "Address"
 msgstr "آدرس"
 
 #. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_attachment_count
+msgid "Attachment Count"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_awards
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__awards
+#: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_2
+msgid "Awards"
+msgstr "دستاوردها"
+
+#. module: hr_extend_ipac
+#: model_terms:ir.ui.view,arch_db:hr_extend_ipac.hr_view_employee_form_inherit_hr_extend_email
+msgid "CV Name"
+msgstr "نام رزومه"
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_capabilities
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__capabilities
+#: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_1
 #: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_2
 msgid "Capabilities"
 msgstr "توانایی ها"
@@ -38,12 +92,29 @@ msgid "Contact"
 msgstr "اطلاعات تماس"
 
 #. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__create_uid
+msgid "Created by"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__create_date
+msgid "Created on"
+msgstr ""
+
+#. module: hr_extend_ipac
 #: code:addons/hr_extend_ipac/report/resume_en.py:0
 #, python-format
 msgid "Current"
 msgstr "تاکنون"
 
 #. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__display_name
+msgid "Display Name"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_education
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__education
 #: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_1
 msgid "Education"
 msgstr "تحصیلات"
@@ -55,13 +126,57 @@ msgstr "ایمیل"
 
 #. module: hr_extend_ipac
 #: model:ir.model,name:hr_extend_ipac.model_hr_employee
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__employee
 msgid "Employee"
 msgstr "کارمند"
 
 #. module: hr_extend_ipac
+#: model:ir.actions.act_window,name:hr_extend_ipac.employee_skills_act_window
+#: model:ir.ui.menu,name:hr_extend_ipac.employee_skills_menu
+msgid "Employee Skills"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_experience
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__experience
+msgid "Experience"
+msgstr "سابقه کار"
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_follower_ids
+msgid "Followers"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_partner_ids
+msgid "Followers (Partners)"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__activity_type_icon
+msgid "Font awesome icon e.g. fa-tasks"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__has_message
+msgid "Has Message"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__id
+msgid "ID"
+msgstr ""
+
+#. module: hr_extend_ipac
 #: model:ir.model,name:hr_extend_ipac.model_report_hr_extend_ipac_resume_en_template
+#: model:ir.model,name:hr_extend_ipac.model_report_hr_extend_ipac_resume_en_template_bw
 msgid "IPAC Resume"
 msgstr "رزومه آسماری"
+
+#. module: hr_extend_ipac
+#: model:ir.actions.report,name:hr_extend_ipac.resume_en_report_bw
+msgid "IPAC Resume BW"
+msgstr "رزومه آسماری BW"
 
 #. module: hr_extend_ipac
 #: model:ir.actions.report,name:hr_extend_ipac.resume_en_report
@@ -69,9 +184,126 @@ msgid "IPAC Resume En"
 msgstr "رزومه آسماری"
 
 #. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_exception_icon
+msgid "Icon"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__activity_exception_icon
+msgid "Icon to indicate an exception activity."
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__message_needaction
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__message_unread
+msgid "If checked, new messages require your attention."
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__message_has_error
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__message_has_sms_error
+msgid "If checked, some messages have a delivery error."
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_is_follower
+msgid "Is Follower"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__job_title
+msgid "Job Title"
+msgstr "عنوان شغل"
+
+#. module: hr_extend_ipac
 #: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_1
 msgid "Language"
 msgstr "زبان"
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume____last_update
+msgid "Last Modified on"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__write_uid
+msgid "Last Updated by"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__write_date
+msgid "Last Updated on"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_main_attachment_id
+msgid "Main Attachment"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_has_error
+msgid "Message Delivery error"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_ids
+msgid "Messages"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__my_activity_date_deadline
+msgid "My Activity Deadline"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__name_cv
+msgid "Name Cv"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_calendar_event_id
+msgid "Next Activity Calendar Event"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_date_deadline
+msgid "Next Activity Deadline"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_summary
+msgid "Next Activity Summary"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_type_id
+msgid "Next Activity Type"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_needaction_counter
+msgid "Number of Actions"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_has_error_counter
+msgid "Number of errors"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__message_needaction_counter
+msgid "Number of messages which requires an action"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__message_has_error_counter
+msgid "Number of messages with delivery error"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__message_unread_counter
+msgid "Number of unread messages"
+msgstr ""
 
 #. module: hr_extend_ipac
 #: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_1
@@ -79,16 +311,93 @@ msgid "Phone"
 msgstr "تلفن"
 
 #. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_projects
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__projects
+#: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_1
 #: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_2
 msgid "Projects"
-msgstr "پروژه"
+msgstr "پروژه ها"
 
 #. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_qualifications
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__qualifications
 #: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_2
 msgid "Qualifications"
 msgstr "صلاحیت ها"
 
 #. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__activity_user_id
+msgid "Responsible User"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_extend
+msgid "Resume Extend"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_has_sms_error
+msgid "SMS Delivery error"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_software
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__software
+#: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_2
+msgid "Software"
+msgstr "نرم افزار"
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__activity_state
+msgid ""
+"Status based on activities\n"
+"Overdue: Due date is already passed\n"
+"Today: Activity date is today\n"
+"Planned: Future activities."
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_2
+msgid "Training"
+msgstr "آموزش"
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_employee__resume_trainings
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__trainings
+msgid "Trainings"
+msgstr "آموزش ها"
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__activity_exception_decoration
+msgid "Type of the exception activity on record."
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_unread
+msgid "Unread Messages"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__message_unread_counter
+msgid "Unread Messages Counter"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,field_description:hr_extend_ipac.field_hr_extend_ipac_resume__website_message_ids
+msgid "Website Messages"
+msgstr ""
+
+#. module: hr_extend_ipac
+#: model:ir.model.fields,help:hr_extend_ipac.field_hr_extend_ipac_resume__website_message_ids
+msgid "Website communication history"
+msgstr ""
+
+#. module: hr_extend_ipac
 #: model_terms:ir.ui.view,arch_db:hr_extend_ipac.resume_page_1
 msgid "Work Experience"
 msgstr "تجربه کاری"
+
+#. module: hr_extend_ipac
+#: model:ir.model,name:hr_extend_ipac.model_hr_extend_ipac_resume
+msgid "hr_extend_ipac.resume"
+msgstr ""
